rightGradient fixed on mobile

--- a/assets/scss/components/_HeroSection.scss
+++ b/assets/scss/components/_HeroSection.scss
@@ -30,7 +30,7 @@
     display: flex;
     justify-content: center;
     align-content: center;
-    background: linear-gradient(to top, $body-color 20%, transparent 80%);
+    background: linear-gradient(to top, $body-color 30%, transparent 70%);
   }
 }
 
